изменение шрифтов и кнопок

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
+.form__select select {
+  margin-left: 25px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border: 0 !important;
+  background: #bdd6f8;
+  background-image: none;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding: 0 .5em;
+  color: #0d3351;
+  cursor: pointer;
+  font-size: 1em;
+  font-family: 'Open Sans', sans-serif;
+}
+
 h3 {
   margin: 0;
   padding: 0;
@@ -17,7 +37,7 @@ body {
 
 .header__body {
   padding-top: 30px;
-  padding-bottom: 50px;
+  padding-bottom: 100px;
   background: url("../img/header_bg.jpg");
   background-position: center;
   background-size: cover;
@@ -35,6 +55,11 @@ body {
           align-items: center;
 }
 
+.header__tel {
+  text-decoration: none;
+  color: #0d3351;
+}
+
 .menu__wrap {
   -webkit-box-flex: 0.5;
       -ms-flex: 0.5 1;
@@ -43,6 +68,11 @@ body {
 
 .menu__list {
   display: none;
+}
+
+.menu__btn img {
+  cursor: pointer;
+  overflow: hidden;
 }
 
 .header__content {
@@ -89,8 +119,28 @@ body {
   background-color: #64d6ff;
 }
 
+.catalog__button {
+  margin-top: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .catalog__body {
+  padding-top: 110px;
+  padding-bottom: 65px;
   background-color: #f3f3f3;
+}
+
+.catalog__sort {
+  text-align: center;
+  cursor: pointer;
 }
 
 .catalog__row {
@@ -110,6 +160,10 @@ body {
 .title {
   color: #00a2dd;
   text-align: center;
+}
+
+.card-item {
+  margin-top: 25px;
 }
 
 .card__body {
